added event listeners and appropriate classes for dropdown functionality.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drop Down Menu</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <nav class="nav" id="nav">
       <ul>
         <li>
-          <a href="#">Menu Item 1</a>
+          <a href="#" class="dropdown-trigger">Menu Item 1</a>
           <ul class="dropdown">
             <li><a href="#">Submenu Item 1</a></li>
             <li><a href="#">Submenu Item 2</a></li>
@@ -19,14 +20,14 @@
           </ul>
         </li>
         <li>
-          <a href="#">Menu Item 2</a>
+          <a href="#" class="dropdown-trigger">Menu Item 2</a>
           <ul class="dropdown">
             <li><a href="#">Submenut Item 1</a></li>
             <li><a href="#">Submenut Item 2</a></li>
             <li><a href="#">Submenut Item 3</a></li>
           </ul>
         </li>
-        <li><a href="#">Menu Item 3</a></li>
+        <li><a href="#" class="dropdown-trigger">Menu Item 3</a></li>
       </ul>
     </nav>
   </body>
