--- a/index.html
+++ b/index.html
@@ -9,26 +9,83 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <nav class="nav" id="nav">
-      <ul>
-        <li>
-          <a href="#" class="dropdown-trigger">Menu Item 1</a>
-          <ul class="dropdown">
-            <li><a href="#">Submenu Item 1</a></li>
-            <li><a href="#">Submenu Item 2</a></li>
-            <li><a href="#">Submenu Item 3</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#" class="dropdown-trigger">Menu Item 2</a>
-          <ul class="dropdown">
-            <li><a href="#">Submenut Item 1</a></li>
-            <li><a href="#">Submenut Item 2</a></li>
-            <li><a href="#">Submenut Item 3</a></li>
-          </ul>
-        </li>
-        <li><a href="#" class="dropdown-trigger">Menu Item 3</a></li>
-      </ul>
-    </nav>
+    <header class="header">
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>Home</button>
+        <div class="dropdown-menu information-grid">
+          <div>
+            <div class="dropdown-heading">Web Development</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">HTML</a>
+              <a href="#" class="link">CSS</a>
+              <a href="#" class="link">JavaScript</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Data Analysis</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">Python</a>
+              <a href="#" class="link">Tableau</a>
+              <a href="#" class="link">Machine Learning</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Data Structures</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">Python</a>
+              <a href="#" class="link">JavaScript</a>
+              <a href="#" class="link">CPP</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Core CS</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">OS</a>
+              <a href="#" class="link">DBMS</a>
+              <a href="#" class="link">CN</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <a href="#" class="link">About</a>
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>Contact</button>
+        <div class="dropdown-menu information-grid">
+          <div>
+            <div class="dropdown-heading">Web Development</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">HTML</a>
+              <a href="#" class="link">CSS</a>
+              <a href="#" class="link">JavaScript</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Data Analysis</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">Python</a>
+              <a href="#" class="link">Tableau</a>
+              <a href="#" class="link">Machine Learning</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Data Structures</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">Python</a>
+              <a href="#" class="link">JavaScript</a>
+              <a href="#" class="link">CPP</a>
+            </div>
+          </div>
+          <div>
+            <div class="dropdown-heading">Core CS</div>
+            <div class="dropdown-links">
+              <a href="#" class="link">OS</a>
+              <a href="#" class="link">DBMS</a>
+              <a href="#" class="link">CN</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
